--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -34,7 +34,7 @@
   </div>
   <div class="footer centered">
     &copy; 2016 - {{site.time | date: "%Y"}},
-    <a href="//github.com/rmpestano">Rafael M. Pestano</a>) and
+    <a href="//github.com/rmpestano">Rafael M. Pestano</a> and
     <a href="//github.com/">Community</a>.
   </div>
   {% include scripts.html %}
