--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -16,13 +16,13 @@
 
 </head>
 <body>
-  <div class="header landing">
+  <div class="header landing" style="background-image: url('{{ site.baseurl }}/images/rider-logo.png');background-size:contain;background-position:center;">
     <div class="container centered">
       <div class="icons">
         <span class="mega-octicon octicon-issue-opened"></span><span class="mega-octicon octicon-star"></span>
         <h1>
           <span class="mega-octicon octicon-git-compare"></span>
-          <a href="{{site.baseurl}}">Database Rider</a>
+          <a style="font-size:55px" href="https://github.com/database-rider/database-rider">Database Rider</a>
           <span class="mega-octicon octicon-search"></span>
         </h1>
         <span class="mega-octicon octicon-repo-forked"></span><span class="mega-octicon octicon-radio-tower"></span>
