--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-  <div class="header landing" style="background-image: url('{{ site.baseurl }}/images/rider-orochi.svg');background-size:contain;background-position:center;">
+  <div class="header landing" style="background-image: url('{{ site.baseurl }}/images/rider_orochi.svg');background-size:contain;background-position:center;">
     <div class="container centered">
       <div class="icons">
         <span class="mega-octicon octicon-issue-opened"></span><span class="mega-octicon octicon-star"></span>
